<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context="ch.heigvd.wordhuntclient.activities.Login.CreateAccountActivity">

    <LinearLayout
        android:background="@color/primary"
        android:transitionName="logo_container"
        android:orientation="vertical"
        android:id="@+id/logo_container"
        android:paddingTop="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/logo_dark"
            android:layout_gravity="center_horizontal"
            android:layout_width="100dp"
            android:layout_height="100dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutSignUp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical"
        android:layout_below="@id/logo_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ch.heigvd.wordhunt.Interaction.FloatLabelLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:floatLabelTextAppearance="@style/TextAppearance.Wordhunt.FloatLabel">

            <EditText
                style="@style/dark_edit_text"
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:singleLine="true"
                android:inputType="textNoSuggestions"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/textEmail" />
        </ch.heigvd.wordhunt.Interaction.FloatLabelLayout>

        <ch.heigvd.wordhunt.Interaction.FloatLabelLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:floatLabelTextAppearance="@style/TextAppearance.Wordhunt.FloatLabel">

            <EditText
                style="@style/dark_edit_text"
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_addresse"
                android:singleLine="true"
                android:inputType="textNoSuggestions|textEmailAddress"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/textPassword" />

        </ch.heigvd.wordhunt.Interaction.FloatLabelLayout>


        <ch.heigvd.wordhunt.Interaction.FloatLabelLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:floatLabelTextAppearance="@style/TextAppearance.Wordhunt.FloatLabel">

            <EditText
                style="@style/dark_edit_text"
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:singleLine="true"
                android:inputType="textNoSuggestions|textPassword"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/textPasswordConfirmation" />

        </ch.heigvd.wordhunt.Interaction.FloatLabelLayout>


        <ch.heigvd.wordhunt.Interaction.FloatLabelLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:floatLabelTextAppearance="@style/TextAppearance.Wordhunt.FloatLabel">

            <EditText
                style="@style/dark_edit_text"
                android:id="@+id/textPasswordConfirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmation_password"
                android:singleLine="true"
                android:inputType="textNoSuggestions|textPassword"
                android:imeOptions="actionDone" />

        </ch.heigvd.wordhunt.Interaction.FloatLabelLayout>


        <LinearLayout
            style="@style/item_small_spacing"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_marginTop="20dp"
                style="@style/button_normal_accent"
                android:id="@+id/buttonPerformSignUp"
                android:text="@string/register"
                android:onClick="onSignUp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
